fix(elements|ino-select): align label

--- a/packages/elements/src/components/ino-select/ino-select.scss
+++ b/packages/elements/src/components/ino-select/ino-select.scss
@@ -133,7 +133,7 @@ ino-select {
     &[class*='--with-leading-icon'] {
       .mdc-floating-label,
       .mdc-floating-label--float-above {
-        left: 40px;
+        left: 48px;
       }
     }
   }
